--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.7
   uuid: ^3.0.7
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
