--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.18.1
   hive: ^2.2.3
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +53,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  path_provider: ^2.1.1
   hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
