--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.7
-  uuid: ^3.0.7
+  uuid: ^4.1.0
   google_fonts: ^6.1.0
   intl: ^0.18.1
   hive: ^2.2.3
   sqflite: ^2.3.0
   path_provider: ^2.1.1
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
